// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PredictedItem renders renders the default state 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 15,
        "paddingVertical": 10,
      },
      Object {
        "height": undefined,
      },
    ]
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "marginRight": 15,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
          Object {
            "height": undefined,
          },
        ]
      }
    >
      <View
        style={Object {}}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontSize": 20,
              },
              Object {
                "fontSize": undefined,
              },
            ]
          }
        >
          🍺
           
        </Text>
      </View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Object {
            "color": "#212121",
            "flex": 1,
            "fontFamily": "Muli-SemiBold",
            "fontSize": 17,
            "lineHeight": 25.5,
          }
        }
      >
        Beer
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 2,
      }
    }
  >
    <ProgressBar
      value={25}
    />
    <View
      style={
        Object {
          "bottom": 0,
          "elevation": 100,
          "justifyContent": "center",
          "position": "absolute",
          "right": 15,
          "top": 0,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#212121",
            "fontFamily": "Muli-SemiBold",
            "fontSize": 15,
          }
        }
      >
        2 days left
      </Text>
    </View>
  </View>
</View>
`;

exports[`PredictedItem renders renders the not enough data state 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 15,
        "paddingVertical": 10,
      },
      Object {
        "height": undefined,
      },
    ]
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "marginRight": 15,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
          Object {
            "height": undefined,
          },
        ]
      }
    >
      <View
        style={Object {}}
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Object {
            "color": "#212121",
            "flex": 1,
            "fontFamily": "Muli-SemiBold",
            "fontSize": 17,
            "lineHeight": 25.5,
          }
        }
      >
        Whiskey
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 2,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#212121",
          "fontFamily": "Muli-SemiBold",
          "fontSize": 17,
          "lineHeight": 25.5,
        }
      }
    >
      Not enough data
    </Text>
  </View>
</View>
`;

exports[`PredictedItem renders renders the out of stock state 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 15,
        "paddingVertical": 10,
      },
      Object {
        "height": undefined,
      },
    ]
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "marginRight": 15,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
          Object {
            "height": undefined,
          },
        ]
      }
    >
      <View
        style={Object {}}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontSize": 20,
              },
              Object {
                "fontSize": undefined,
              },
            ]
          }
        >
          🍷
           
        </Text>
      </View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Object {
            "color": "#212121",
            "flex": 1,
            "fontFamily": "Muli-SemiBold",
            "fontSize": 17,
            "lineHeight": 25.5,
          }
        }
      >
        Wine
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 2,
      }
    }
  >
    <ProgressBar
      value={0}
    />
    <View
      style={
        Object {
          "bottom": 0,
          "elevation": 100,
          "justifyContent": "center",
          "position": "absolute",
          "right": 15,
          "top": 0,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#212121",
            "fontFamily": "Muli-SemiBold",
            "fontSize": 15,
          }
        }
      >
        0 days left
      </Text>
    </View>
  </View>
</View>
`;

exports[`PredictedItem renders renders with minimum required props 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 15,
        "paddingVertical": 10,
      },
      Object {
        "height": undefined,
      },
    ]
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "marginRight": 15,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
          Object {
            "height": undefined,
          },
        ]
      }
    >
      <View
        style={Object {}}
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Object {
            "color": "#212121",
            "flex": 1,
            "fontFamily": "Muli-SemiBold",
            "fontSize": 17,
            "lineHeight": 25.5,
          }
        }
      />
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 2,
      }
    }
  >
    <ProgressBar />
    <View
      style={
        Object {
          "bottom": 0,
          "elevation": 100,
          "justifyContent": "center",
          "position": "absolute",
          "right": 15,
          "top": 0,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#212121",
            "fontFamily": "Muli-SemiBold",
            "fontSize": 15,
          }
        }
      >
        NaN days left
      </Text>
    </View>
  </View>
</View>
`;
